# sentiment-scope

./: preprocess.py  pyproject.toml
notebooks/: test.ipynb
notebooks/datasets/: review.csv
tests/: test_preprocess.py
